force-app/main/default/objects/User/fields/Activities_Access__c.field-meta.xml
<CustomField>
    <fullName>Activities_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check/uncheck this checkbox to give/revert Activities access to community users with the following profile(s): Marketplace User - Emerging Manager Membership and Marketplace User - Standard Membership</inlineHelpText>
    <label>Events, Tasks, Notes Access</label>
    <type>Checkbox</type>
</CustomField>