force-app/main/default/objects/User/fields/Allow_Account_and_Contacts_Export__c.field-meta.xml
<CustomField>
    <fullName>Allow_Account_and_Contacts_Export__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Allow Marketplace members to export Accounts and Contacts in chunk of 500</inlineHelpText>
    <label>Allow Account and Contacts Export</label>
    <type>Checkbox</type>
</CustomField>