force-app/main/default/objects/User/fields/BDR_Reports__c.field-meta.xml
<CustomField>
    <fullName>BDR_Reports__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BDR Reports</label>
    <type>Checkbox</type>
</CustomField>