force-app/main/default/objects/User/fields/Calendly__CalendlyLink__c.field-meta.xml
<CustomField>
    <fullName>Calendly__CalendlyLink__c</fullName>
    <label>Calendly Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>