force-app/main/default/objects/User/fields/Copilot_Exported_Reports_Count__c.field-meta.xml
<CustomField>
    <fullName>Copilot_Exported_Reports_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>To count the number of reports exported by users using Dakota Copilot Application</description>
    <label>Copilot Exported Reports Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>