force-app/main/default/objects/User/fields/CRMG_GTM__Access_Token__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__Access_Token__c</fullName>
    <label>Access Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>