force-app/main/default/objects/User/fields/CRMG_GTM__GTM_Conference_Call_Information__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__GTM_Conference_Call_Information__c</fullName>
    <label>GTM Conference Call Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>