force-app/main/default/objects/User/fields/CRMG_GTM__isTokenAuthorized__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__isTokenAuthorized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isTokenAuthorized</label>
    <type>Checkbox</type>
</CustomField>