force-app/main/default/objects/User/fields/CRMG_GTM__Meeting_Duration__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__Meeting_Duration__c</fullName>
    <label>GTM Meeting Duration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>45</fullName>
            </value>
            <value>
                <fullName>60</fullName>
                <default>true</default>
                <label>60</label>
            </value>
            <value>
                <fullName>75</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>120</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>