force-app/main/default/objects/User/fields/CRMG_GTM__Meeting_URL__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__Meeting_URL__c</fullName>
    <inlineHelpText>Only use this field if you are using a &quot;Recurring Meeting&quot;</inlineHelpText>
    <label>Meeting URL</label>
    <type>Url</type>
</CustomField>