force-app/main/default/objects/User/fields/CRMG_GTM__Organizer_Key__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__Organizer_Key__c</fullName>
    <label>Organizer Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>