force-app/main/default/objects/User/fields/CRMG_GTM__Signature__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__Signature__c</fullName>
    <label>GTM Signature</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>