force-app/main/default/objects/User/fields/CRMG_GTM__Use_Org_Wide_Email__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__Use_Org_Wide_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Org Wide Email for GTM</label>
    <type>Checkbox</type>
</CustomField>