force-app/main/default/objects/User/fields/DC_Plan_Accounts_Access__c.field-meta.xml
<CustomField>
    <fullName>DC_Plan_Accounts_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check/Uncheck this checkbox to give/revert DC Plan Accounts access to community users</inlineHelpText>
    <label>DC Plan Accounts Access</label>
    <type>Checkbox</type>
</CustomField>