force-app/main/default/objects/User/fields/Enable_Dakota_Copilot__c.field-meta.xml
<CustomField>
    <fullName>Enable_Dakota_Copilot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable DakotaGPT</label>
    <type>Checkbox</type>
</CustomField>