force-app/main/default/objects/User/fields/Export_Batch_Limit__c.field-meta.xml
<CustomField>
    <fullName>Export_Batch_Limit__c</fullName>
    <defaultValue>10</defaultValue>
    <inlineHelpText>The default batch limit is set to 10. This count will reset every 30 days</inlineHelpText>
    <label>Export Batch Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>