force-app/main/default/objects/User/fields/Form_5500_Records_Access__c.field-meta.xml
<CustomField>
    <fullName>Form_5500_Records_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check/Uncheck this checkbox to give/revert Form 5500 Accounts access to community users</inlineHelpText>
    <label>Form 5500 Records Access</label>
    <type>Checkbox</type>
</CustomField>