force-app/main/default/objects/User/fields/Last_Export_Reset_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Export_Reset_Date__c</fullName>
    <label>Last Export Reset Date</label>
    <type>Date</type>
</CustomField>