force-app/main/default/objects/User/fields/Legacy_Record_Imported__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Record_Imported__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legacy Record Imported</label>
    <type>Checkbox</type>
</CustomField>