force-app/main/default/objects/User/fields/LP_GP_Data_Access__c.field-meta.xml
<CustomField>
    <fullName>LP_GP_Data_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this checkbox to give marketplace user access to LP &amp; GP data</inlineHelpText>
    <label>LP &amp; GP Data Access</label>
    <type>Checkbox</type>
</CustomField>