force-app/main/default/objects/User/fields/Portal_State__c.field-meta.xml
<CustomField>
    <fullName>Portal_State__c</fullName>
    <label>Portal State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MP 2.0</fullName>
                <default>true</default>
                <label>MP 2.0</label>
            </value>
            <value>
                <fullName>Marketplace2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>