force-app/main/default/objects/User/fields/Public_Investments_Access__c.field-meta.xml
<CustomField>
    <fullName>Public_Investments_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check/uncheck this checkbox to give/revert Public Investments access to community users with the following profile(s): Marketplace User - Emerging Manager Membership and Marketplace User - Standard Membership</inlineHelpText>
    <label>Public Investments Access</label>
    <type>Checkbox</type>
</CustomField>