force-app/main/default/objects/User/fields/Restrict_Insurance_Record_Access__c.field-meta.xml
<CustomField>
    <fullName>Restrict_Insurance_Record_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check/Uncheck this checkbox to give/revert Insurance Accounts and related data access to community users</inlineHelpText>
    <label>Restrict Insurance Record Access</label>
    <type>Checkbox</type>
</CustomField>