force-app/main/default/objects/User/fields/Searches_Access__c.field-meta.xml
<CustomField>
    <fullName>Searches_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check/uncheck this checkbox to give/revert marketplace searches access to community users with the following profile(s): Marketplace User - Emerging Manager Membership and</inlineHelpText>
    <label>Searches Access</label>
    <type>Checkbox</type>
</CustomField>