force-app/main/default/objects/User/fields/Total_Member_Comments__c.field-meta.xml
<CustomField>
    <fullName>Total_Member_Comments__c</fullName>
    <label>Total Member Comments</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>