force-app/main/default/objects/User/fields/User_ID_Case_Safe__c.field-meta.xml
<CustomField>
    <fullName>User_ID_Case_Safe__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User ID (Case Safe)</label>
    <type>Text</type>
</CustomField>