force-app/main/default/objects/User/fields/User_Status__c.field-meta.xml
<CustomField>
    <fullName>User_Status__c</fullName>
    <formula>IF(
   Contact.User_Last_Login_Date__c  &gt;= TODAY() - 14, 
    &apos;1. GREEN - 0-14&apos;, 
    IF(
       Contact.User_Last_Login_Date__c &gt;= TODAY() - 30, 
        &apos;2. YELLOW - 15-30&apos;, 
        IF(
           Contact.User_Last_Login_Date__c &gt;= TODAY() - 90, 
            &apos;3. RED - 31-90&apos;, 
            IF(
               Contact.User_Last_Login_Date__c &gt;= TODAY() -10000, 
                &apos;4. GREY - 90+&apos;,
                 &apos;5. BLACK - N/A&apos;
                
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Status</label>
    <type>Text</type>
</CustomField>