force-app/main/default/objects/User/fields/X13F_Investments_Access__c.field-meta.xml
<CustomField>
    <fullName>X13F_Investments_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check/uncheck this checkbox to give/revert 13F Filing Investments access to community users with the following profile(s): Marketplace User - Emerging Manager Membership and Marketplace User - Standard Membership</inlineHelpText>
    <label>13F Investments Access</label>
    <type>Checkbox</type>
</CustomField>