force-app/main/default/objects/User/fields/zoom_app__Secret_Token__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Secret_Token__c</fullName>
    <label>Secret Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>