force-app/main/default/objects/User/validationRules/Export_Batch_Limit_Greater_Then_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Export_Batch_Limit_Greater_Then_Zero</fullName>
    <active>true</active>
    <errorConditionFormula>Export_Batch_Limit__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Export_Batch_Limit__c</errorDisplayField>
    <errorMessage>Value must be greater than or equal to zero</errorMessage>
</ValidationRule>