force-app/main/default/objects/User/listViews/Active_Marketplace_Members.listView-meta.xml
<ListView>
    <fullName>Active_Marketplace_Members</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.COMMUNITY_NICKNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Dakota Customer Community</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USERS.EMAIL</field>
        <operation>notContain</operation>
        <value>dakota</value>
    </filters>
    <label>Active Marketplace Members</label>
</ListView>